# Koala

./: .gitignore  .golangci.yml  BLINK.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  PLAN.md  README.md  SECURITY.md  blink.toml  docker-compose.blink.yml  docker-compose.yml  go.mod  go.sum
.claude/: launch.json
.claude/scripts/: koala-preview.sh
.github/workflows/: ci.yml
cmd/koala-orchestrator/: main.go
cmd/koala-packager/: main.go
configs/: koala.example.yaml  koala.homelab.yaml  koala.yaml
deploy/: Dockerfile.orchestrator  Dockerfile.worker
docs/: HANDOFF.md  deployment.md  homelab-networking.md  v0.1-acceptance-report.md
docs/examples/: docker-compose.homelab.yml
internal/audit/: memory.go  sqlite.go  sqlite_test.go  store.go
internal/camera/: cache.go  cache_test.go  discovery.go  discovery_test.go  registry.go
internal/config/: config.go  config_test.go
internal/inference/: client.go  grpcclient.go  grpcclient_test.go  httpclient.go
internal/ingest/: ffmpeg.go  manager.go  manager_test.go  persistent_ffmpeg.go  persistent_ffmpeg_test.go
internal/mcp/: allowlist.go  (+16 more)
live-ui/: .env.example  README.md  index.html  package-lock.json  package.json
proto/: koala_inference.proto
skills/: SKILL.md
tests/: replay_e2e_test.go
worker/: mypy.ini  pyproject.toml  ruff.toml
worker/koala_worker/: detector.py  grpc_server.py  models.py  server.py
worker/koala_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
worker/koala_worker/proto/: koala_inference_pb2.py  koala_inference_pb2_grpc.py
worker/tests/: test_detector.py  test_grpc_server.py  test_models.py
worker/tools/: eval_runner.py
(+40 files in other folders)
