[project]
name = "koala-worker"
version = "0.1.0"
description = "Koala Python inference worker"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
koala-worker = "koala_worker.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
