[project]
name = "koala-worker"
version = "0.1.0"
description = "Koala Python inference worker"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
inference = ["ultralytics>=8.0"]
# gpu: use this on Jetson — install NVIDIA PyTorch wheel first, then pip install -e ".[gpu]"
gpu = ["ultralytics>=8.0"]

[project.scripts]
koala-worker = "koala_worker.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
